examples/test/testpolicy4100.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4100
  namespace: namespace45
spec:
  podSelector:
    matchLabels:
      key30: value7
      key45: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value19
          key33: value33
      podSelector:
        matchLabels:
          key49: value31
          key1: value17
          key32: value47
